testing img overflow fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -168,6 +168,7 @@ a {
 
 .main-content {
   word-wrap: break-word;
+  overflow: auto;
 
   :first-child {
     margin-top: 0;
